# clash-export

./: .babelrc  .docker-machine-deploy.json  .dockerignore  .editorconfig  .env.example  .envrc.example  .gitignore  .travis.yml  Dockerfile  Dockerfile.imgproxy  Dockerfile.scheduler  MANIFEST.in  Makefile  Pipfile  README.md  deploy.yml  docker-compose.override.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  top_players.py  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: pr.yml  push.yml
app/: clan.pickle  main.py  new.pickle  scheduler.py
app/clash/: api.py  calculation.py  clan_comparison.py  transformer.py
app/javascript/: Clan.vue  ClanTag.vue  details-page.js  fake-data.js  index.js
app/model/: __init__.py
app/templates/: 404.html  500.html  clan.html  error.html  index.html  layout.html  leaderboard.html  status.html
assets/css/: .gitignore  badge.sass  charts.scss  coc-sprite.scss  components.css  components.scss  similar-clans.css  similar-clans.scss  styles.css  styles.scss
assets/js/: clan-page.js  common.js  details-page.js  index.js  player-page.js  polyfill.js  shims.js  top-search-nav.js  troop-page.js
caddy/: Caddyfile  Caddyfile.imgproxy  Caddyfile.local
clashleaders/: __init__.py  cli.py  config.py  player_worker.py  robots.txt  rq_worker.py  scheduler.py  util.py  worker.py
clashleaders/batch/: purge.py  similar_clan.py
clashleaders/clash/: api.py  calculation.py  clan_calculation.py  excel.py  percentile.py  player_calculation.py  similar.py  transformer.py  uptime.py
clashleaders/clustering/: csv_export.py  kmeans.py
clashleaders/data/: countries.json
clashleaders/graphql/: badge.py  clan.py  graphqlview.py  player.py  schema.py  test.py  war.py
clashleaders/insights/: clan_activity.py  cwl_activity.py  player_activity.py  troops.py
clashleaders/model/: __init__.py  avg_troop.py  avg_troops.py  clan.py  clan_delta.py  clan_members.py  clan_pg.py  clan_pre_calculated.py  clan_war.py  columns.py  cwl_group.py  cwl_war.py  historical_clan.py  historical_player.py  player.py  player_pg.py  status.py  trained_model.py  war.py
clashleaders/proto/: player_stats.proto  player_stats_pb2.py
clashleaders/queue/: calculation.py  player.py  war.py
clashleaders/static/: web-manifest.json
clashleaders/templates/: 404.html  500.html  about.html  clan.html  country-leaderboard.html  country.html  error.html  explore.html  index.html  layout.html  leaderboard.html  player.html  privacy.html  sitemap.xml  sitemap_index.xml  status.html  tag.html  terms.html  troop.html  updates.html  verified.html
clashleaders/text/: clan_description_processor.py
clashleaders/views/: __init__.py  badge.py  clan.py  clan_player.py  country.py  error.py  explore.py  export.py  index.py  multi_export.py  perf.py  player.py  privacy.py  search.py  similar_clans.py  sitemap.py  static.py  status.py  tag.py  troop.py  verified.py
clashleaders/worker/: calculation_worker.py
clashstats/: __init__.py  scheduler.py
clashstats/clash/: api.py  calculation.py  excel.py  transformer.py
clashstats/model/: __init__.py  clan.py  clan_pre_calculated.py  player.py  status.py
clashstats/templates/: clan.html  country.html  index.html  layout.html  leaderboard.html  sitemap_template.xml  status.html
clashstats/views/: __init__.py  clan.py  error.py  index.py  sitemap.py  status.py
conf/: cron.sh  crontab  gunicorn.conf.py  requirements.txt  supervisord-scheduler.conf  supervisord-web.conf  supervisord-worker.conf
integration/: Dockerfile  jest-setup.js  package-lock.json  package.json  pnpm-lock.yaml  test.js
migrations/versions/: 0fefde32f73a_.py  2dc765a0390d_.py  31afd2859504_.py  8e79948e21ac_.py
mongosnapshot/: restore.sh
proxy-error/: Dockerfile  index.html
tests/: conftest.py  transformer_test.py
tests/clash/: api_test.py  calculation_test.py  excel_test.py  test_api.py  transformer_test.py
tests/fixtures/: clan-table.html  clan.json  (+8 more)
(+65 files in other folders)
