[tool.poetry]
name = "clashleaders"
version = "0.1.0"
description = ""
authors = ["Amir Raminfar <findamir@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.11"
aiohttp = "^3.8.5"
awesome-slugify = "^1.6.5"
bugsnag = "^4.5.0"
CairoSVG = "^2.7.1"
Flask = "^2.3.3"
Flask-Caching = "^2.0.1"
Flask-WTF = "^1.1.1"
graphene = "^3.2.2"
numpy = "^1.23.4"
pandas = "^2.0.0"
pymongo = "^4.3.2"
mongoengine = "^0.27.0"
redis = "^4.4.4"
rq = "^1.15.0"
rq-dashboard = "^0.6.1"
scikit-learn = "^1.1.3"
scipy = "^1.9.3"
uvloop = "^0.17.0"
XlsxWriter = "^3.1.3"
gunicorn = "^21.2.0"
blinker = "^1.6.2"
markdown = "^3.4.1"
requests = "^2.28.1"
cachetools = "^5.3.1"
inflection = "^0.5.1"
protobuf = "^4.21.9"
contentful = "^2.0.0"
cachelib = "^0.10.2"
setuptools = "^68.0.0"
pillow = "^10.0.0"
multidict = "^6.0.4"
graphql-server = {extras = ["flask"], version = "^3.0.0b6"}


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.0.0"
pytest = "^7.2.0"
snapshottest = "^0.6.0"
aioresponses = "^0.7.4"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
worker = "clashleaders.worker:main"
rq_worker = "clashleaders.rq_worker:main"
update_all = "clashleaders.cli:update_all_calculations"
update_status = "clashleaders.model:Status.update_status"
delete_outdated = "clashleaders.batch.purge:delete_outdated"
reset_stats = "clashleaders.batch.purge:reset_stats"
compute_similar_clans = "clashleaders.batch.similar_clan:compute_similar_clans"
update_troops = "clashleaders.model:AverageTroop.update_all"
fetch_clan_leaderboards = "clashleaders.cli:fetch_clan_leaderboards"
fetch_tags = "clashleaders.cli:fetch_tags"
