[project]
name = "clashleaders"
version = "0.1.0"
requires-python = ">=3.13"


[project.scripts]
worker = "clashleaders.worker:main"
rq_worker = "clashleaders.rq_worker:main"
update_all = "clashleaders.cli:update_all_calculations"
update_status = "clashleaders.model:Status.update_status"
delete_outdated = "clashleaders.batch.purge:delete_outdated"
reset_stats = "clashleaders.batch.purge:reset_stats"
compute_similar_clans = "clashleaders.batch.similar_clan:compute_similar_clans"
update_troops = "clashleaders.model:AverageTroop.update_all"
fetch_clan_leaderboards = "clashleaders.cli:fetch_clan_leaderboards"
fetch_tags = "clashleaders.cli:fetch_tags"
